@startuml work1_updated
skinparam classAttributeIconSize 0

class Animal {
    - name : string
    --
    + AddToArray(tokens: vector<string>, array: vector<unique_ptr<Animal>>&) : void
    + DelObj(tokens: vector<string>, array: vector<unique_ptr<Animal>>&) : void
    + MatchObj(command: vector<string>) : bool
    + PrintObj() : void
    + PrintArray(array: vector<unique_ptr<Animal>>&) : void
}

class Fish {
    - livingPlace : placeEnum
    --
    + AddToArray(tokens: vector<string>, array: vector<unique_ptr<Animal>>&) : void
    + PrintObj() : void
    + MatchObj(command: vector<string>) : bool
}

class Bird {
    - fast : float
    --
    + AddToArray(tokens: vector<string>, array: vector<unique_ptr<Animal>>&) : void
    + PrintObj() : void
    + MatchObj(command: vector<string>) : bool
}

class Insect {
    - size : float
    - dateOfOpening : string
    --
    + AddToArray(tokens: vector<string>, array: vector<unique_ptr<Animal>>&) : void
    + PrintObj() : void
    + MatchObj(command: vector<string>) : bool
}

enum placeEnum {
    placeEnumDefault = 0
    river = 1
    lake = 2
    sea = 3
}

Animal <|-- Fish
Animal <|-- Bird
Animal <|-- Insect
Fish --> placeEnum : uses

@enduml